# brachml

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/modules/: AddBrachML.cmake  AddRVML.cmake
include/brachml/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/brachml/Dialect/: CMakeLists.txt
include/brachml/Dialect/Basic/: BrachMLDialect.h  BrachMLDialect.td  BrachMLOps.h  BrachMLOps.td  CMakeLists.txt
include/brachml/Dialect/Quant/: BrachMLQDialect.h  BrachMLQDialect.td  BrachMLQOps.h  BrachMLQOps.td  CMakeLists.txt
include/brachml/Importer/: TorchImporter.h
include/brachml/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/rvml/Dialect/: CMakeLists.txt
include/rvml/Importer/: TorchImporter.h
lib/: CMakeLists.txt
lib/Conversion/: BrachMLToLLVM.cc  BrachMLToLinalg.cc  CMakeLists.txt  RVMLToLLVM.cpp
lib/Dialect/: CMakeLists.txt  RVMLDialect.cpp
lib/Dialect/Basic/: BrachMLDialect.cc  BrachMLOps.cc  CMakeLists.txt
lib/Dialect/Quant/: BrachMLQDialect.cc  BrachMLQOps.cc  CMakeLists.txt
lib/Importer/: CMakeLists.txt  TorchImporter.cpp
lib/Transforms/: BeamSearchFusionPass.cc  CMakeLists.txt  FusionPass.cc  Passes.cpp  QuantizationPass.cc
models/cifar10/: main.py  pyproject.toml
python/: CMakeLists.txt  pyproject.toml  ty.toml
python/brachml-import/: importer.py
python/brachml-import/dialects/: _brachml_ops_gen.py
python/brachml_import/: __main__.py  importer.py
python/brachml_import/dialects/: _brachml_ops_gen.py  brachml.py
python/brachml_quant/: __init__.py  calibration.py  graph.py
python/cifar10/: cifar_core_aten.pt2  cifar_model.pt2  main.py
python/models/cifar10/: calibration.json  main.py
python/models/resnet/: main.py
runtime/: CMakeLists.txt
runtime/firmware/rpzero2/: link.ld  startup.S
tests/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
tests/brachml-import/: add.py  addmm.py  conv_relu_pool.py  generate_models.py  matmul.py  relu.py  reshape.py
tests/brachml-import/models/: relu.pt2
tests/brachml_import/: add.py  addmm.py  cifar_quant.py  conv_relu_pool.py  generate_models.py  matmul.py  relu.py  reshape.py
tests/brachml_import/models/: add.pt2  addmm.pt2  cifar_quant.pt2  conv_relu_pool.pt2  matmul.pt2  reshape.pt2
tests/transforms/: beam_search_fusion.mlir  conv_bn_relu_fusion.mlir  linear_fusion.mlir  quantization.mlir  quantization_calibration.json  quantization_diagnostics.mlir
tools/: CMakeLists.txt
tools/brachml/: CMakeLists.txt
tools/brachml-opt/: CMakeLists.txt  main.cc
tools/rvml/: CMakeLists.txt
tools/rvml-import/: CMakeLists.txt  main.cpp
tools/rvml-opt/: CMakeLists.txt  main.cpp
