[project]
name = "brachml-python"
version = "0.1.0"
description = "BrachML Python tools: model importer and example models"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "torchao>=0.17.0",
]

[tool.uv]
extra-index-url = ["https://download.pytorch.org/whl/cu126"]
